<resources>
    <string name="app_name">Musikus</string>
    <string name="sessionSummaryComment">Comment</string>
    <string name="sessionSummaryPracticeTime">Practice time</string>
    <string name="sessionSummaryBreakTime">Break time</string>
    <string name="saveSessionTitle">Summary</string>
    <string name="sessionSummarySaveButton">Save session</string>
    <string name="sessionListTitle">PracticeTime!</string>
    <string name="endSessionDialogOk">Save</string>
    <string name="endSessionDialogCancel">Keep practicing</string>
    <string name="endSessionDialogCommentField">Comment (optional)</string>
    <string name="discard_session_dialog_title">Discard current session and lose all progress?</string>
    <string name="discard_dialog_ok">Discard</string>
    <string name="discard_session_dialog_cancel">Keep practicing</string>
    <string name="navigationLibraryTitle">Library</string>
    <string name="navigationGoalsTitle">Goals</string>
    <string name="navigationSessionsTitle">Sessions</string>
    <string name="navigationStatisticsTitle">Statistics</string>
    <string name="addLibraryItemDialogTitle">Add new Item</string>
    <string name="addLibraryItemDialogTitleEdit">Edit Item</string>
    <string name="addLibraryItemDialogNameHint">Item name</string>
    <string name="addLibraryItemAlertOk">Add</string>
    <string name="addLibraryItemAlertOkEdit">Edit</string>
    <string name="addLibraryItemAlertCancel">Cancel</string>
    <string name="endSessionDialogTitle">Finish Session</string>
    <string name="discard_session">Discard Session</string>
    <string name="practice_time_description">Practice Time</string>
    <string name="library_items">Library items:</string>
    <string name="metronome">Metronome</string>
    <string name="recorder">Recorder</string>
    <string name="hint_start_new_session">Select a library item to start a new session</string>
    <string name="hide_month">Hide month</string>
    <string name="show_month">Show month</string>
    <string name="progressUpdateContinue">Continue</string>
    <string name="progressUpdateSkip">Skip animation</string>
    <string name="addGoalDialogTitle">Create a new goal</string>
    <string name="goalDialogTitleEdit">Edit goal target</string>
    <string name="goalDialogOkEdit">Edit</string>
    <string name="goalDialogTarget">Target:</string>
    <string name="goalDialogCatSelectHint">Select an item</string>
    <string name="goalDialogUseAllLibraryItems">All items</string>
    <string name="goalDialogUseSpecificLibraryItems">Single item</string>
    <string name="goalDialogHoursText">h</string>
    <string name="goalDialogMinutesText">m</string>
    <string name="addGoalDialogxInx">in</string>
    <string name="goalDialogGoalUnitTooltip">Goals will always start at the beginning of the respective day, week, or month.</string>
    <string name="goalDialogRepeat">Repeat goal</string>
    <string name="goalDialogRepeatTooltip">Repeat the goal after the time has elapsed. If you want to create a one time goal, disable this option.</string>
    <string name="archivedGoalsToolbar">Inactive goals (%d)</string>
    <string name="archivedGoalsTitle">Inactive goals</string>
    <string name="archivedGoalsUnarchive">Restore</string>
    <string name="archivedGoalsConfirmUnarchive">Restore this goal?</string>
    <string name="archivedGoalsConfirmUnarchiveWithLibraryItem">Restore this goal along with the item %s?</string>
    <string name="archivedGoalsUnarchiveGoalToast">Goal restored</string>
    <string name="archivedGoalsDelete">Delete</string>
    <string name="archivedGoalsConfirmDelete">Irreversibly delete this goal and all of its data?</string>
    <string name="topToolBarSettings">Settings</string>
    <string name="topToolBarTheme">Theme</string>
    <string name="topToolBarThemeAuto">Automatic</string>
    <string name="topToolBarThemeDark">Dark theme</string>
    <string name="topToolBarThemeLight">Light theme</string>
    <string name="topToolBarEdit">Edit</string>
    <string name="topToolBarArchive">Archive</string>
    <string name="topToolBarDelete">Delete</string>
    <string name="libraryToolbarSortMode">Sort by</string>
    <string name="libraryToolbarSortModeDateAdded">Date added</string>
    <string name="libraryToolbarSortModeLastModified">Last modified</string>
    <string name="libraryToolbarSortModeName">Name</string>
    <string name="libraryToolbarSortModeColor">Color</string>
    <string name="libraryToolbarSortModeCustom">Custom</string>
    <string name="dialogDismiss">Cancel</string>
    <string name="dialogConfirm">Confirm</string>
    <plurals name="deleteGoalDialogMessage">
        <item quantity="one">Delete selected goal?</item>
        <item quantity="other">Delete selected goals?</item>
    </plurals>
    <plurals name="archiveGoalDialogMessage">
        <item quantity="one">Deactivate selected goal?</item>
        <item quantity="other">Deactivate selected goals?</item>
    </plurals>
    <plurals name="archiveGoalToast">
        <item quantity="one">Goal deactivated</item>
        <item quantity="other">Goals deactivated</item>
    </plurals>
    <string name="archiveGoalConfirm">Deactivate</string>
    <string name="deleteSessionDialogMessage">Delete selected session and lose all goal progress?</string>
    <string name="deleteSessionsDialogMessage">Delete selected sessions and lose all goal progress?</string>
    <string name="deleteGoalDialogFullDeleteCheckbox">Delete goal from statistics as well</string>
    <plurals name="deleteGoalToast">
        <item quantity="one">Goal deleted</item>
        <item quantity="other">Goals deleted</item>
    </plurals>
    <string name="deleteLibraryItemDialogMessage">Delete selected item</string>
    <string name="deleteLibraryItemsDialogMessage">Delete selected items</string>
    <string name="deleteLibraryItemSuccessSnackbar">Library item deleted</string>
    <string name="deleteLibraryItemsSuccessSnackbar">Library items deleted</string>
    <string name="deleteLibraryItemFailSnackbar">Item could not be deleted, because it is associated with at least one goal</string>
    <string name="deleteLibraryItemsFailSnackbar">Some items could not be deleted, because they are associated with at least one goal</string>
    <string name="deleteDialogConfirm">Delete</string>
    <string name="time_left">%1$s left</string>
    <plurals name="time_period_day">
        <item quantity="one">in one day</item>
        <item quantity="other">in %d days</item>
    </plurals>
    <plurals name="time_period_week">
        <item quantity="one">in one week</item>
        <item quantity="other">in %d weeks</item>
    </plurals>
    <plurals name="time_period_month">
        <item quantity="one">in one month</item>
        <item quantity="other">in %d months</item>
    </plurals>
    <string name="goal_name_non_specific">All items</string>
    <string name="add_goal">Goal</string>
    <string name="selected">selected</string>
    <string name="item_removed">Section removed from session</string>
    <string name="undo">undo</string>
    <string name="progressUpdateTitle">Goal progress</string>
    <string name="goalsFragmentHint">Create some goals to get started on tracking your progress.</string>
    <string name="libraryHint">Create library items for any piece, scale or other exercise you want to practice.</string>
    <string name="sessionsHint">Press the \"+\" button to start your first practice session.</string>
    <string name="statisticsHint">Complete a session to see your statistics here.</string>
    <string name="new_session_fab">Start a new session</string>
    <string name="running_session_fab">Return to running session</string>
    <string name="new_library_item_fab">Create a new Item</string>
    <string name="new_goal_fab">Create a new goal</string>
    <string name="fullscreen_session_title">Edit Session</string>
    <string name="fullscreen_session_cancel">Cancel</string>
    <string name="fullscreen_session_save_changes">Save</string>
    <string name="fullscreen_session_rating_label">Your rating</string>
    <string name="fullscreen_session_date_label">Date &amp; Time</string>
    <string name="fullscreen_session_date">%s at %s</string>
    <string name="fullscreen_session_time_label">Your session time</string>
    <string name="goal_description_achieved">Goal achieved!</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="shrug">¯\\_(ツ)_/¯</string>
    <string name="no_sessions">No sessions.</string>
    <string name="editDialogOk">Edit</string>
    <string name="editDialogCancel">Cancel</string>
    <string name="edit_section_time_dialog_title">Edit section time</string>
    <string name="discard_comment_dialog_message">Discard comment?</string>
    <string name="discard_comment_dialog_cancel">Keep writing</string>
    <string name="confirm_changes_dialog_message">Save changes to session?</string>
    <string name="confirm_changes_dialog_ok">Save</string>
    <string name="discard_changes_dialog_message">Discard changes?</string>
    <string name="discard_changes_dialog_cancel">Keep editing</string>
    <string name="goalDialogDefaultDuration">00</string>
    <string name="metronome_sheet_title">Metronome</string>
    <string name="metronome_sheet_start">Start metronome</string>
    <string name="metronome_sheet_stop">Stop metronome</string>
    <string name="metronome_sheet_beats_per_bar">Beats/bar</string>
    <string name="metronome_sheet_default_beats_per_bar">4</string>
    <string name="metronome_sheet_clicks_per_beat">Clicks/beat</string>
    <string name="metronome_sheet_default_clicks_per_beat">1</string>
    <string name="record_sheet_start_pause">Start/Pause recording</string>
    <string name="record_sheet_save_location_label">Location:</string>
    <string name="record_sheet_save_location">Music/Musikus</string>
    <string name="help_replay_intro">Replay app introduction</string>
    <string name="help_title">Help</string>
    <string name="help_tips_title">Tips and tricks</string>
    <string name="donations_title">Support us!</string>
    <string name="app_info">App info</string>
    <string name="legal_title">Legal Info</string>
    <string name="legal_project_hint">This project has been financed by the German music promotion program “Neustart Kultur“ by the GVL (Gesellschaft zur Verwertung von Leistungsschutzrechten mbH)</string>
    <string name="publisher">Publisher</string>
    <string name="legal_text">Javier Carbone (Freelance)\nJakob Felder Weg 36\n55128, Mainz, Germany\npracticetimeapp@gmail.com</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="privacy_policy">Musikus is an Open Source app. This service is provided at no cost and is intended for use as is.\n\n<b>Information Collection and Use</b>\nMusikus does not collect any personal data, neither does the app use any third-party services that collect personal data. All of your data is stored locally on your device and is not shared with anyone.\n\n<b>Updates</b>\nWe will update this privacy policy as needed so that it is current, accurate, and as clear as possible. Your continued use of our Services confirms your acceptance of our updated Privacy Policy\n\n<b>Contact Us</b>\nIf you have questions or suggestions about our Privacy Policy please contact us at privacy@musikus.app.</string>
    <string name="licences_title">Open source licences</string>
    <string name="about_app_title">About the app</string>
    <string name="concept_title">Concept</string>
    <string name="concept_text">Javier Carbone</string>
    <string name="development_title">Design &amp; Development</string>
    <string name="development_text">Matthias Emde\nMichael Prommersberger</string>
    <string name="about_appicon_title">App Icon</string>
    <string name="about_appicon_text">Alejandra Contreras Westermeyer</string>
</resources>