<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/topToolbarSettings"
        android:enabled="true"
        android:title="@string/topToolBarSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/topToolbarThemeSwitch"
        android:enabled="true"
        android:title="@string/topToolBarTheme"
        app:showAsAction="never" >

        <menu>
            <item
                android:id="@+id/topToolbarThemeSwitchAuto"
                android:title="@string/topToolBarThemeAuto" />

            <item
                android:id="@+id/topToolbarThemeSwitchLight"
                android:title="@string/topToolBarThemeLight" />

            <item
                android:id="@+id/topToolbarThemeSwitchDark"
                android:title="@string/topToolBarThemeDark" />

        </menu>

    </item>
</menu>