<?xml version="1.0" encoding="utf-8"?>
<!--
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at https://mozilla.org/MPL/2.0/.

    Copyright (c) 2022 Matthias Emde

    Parts of this software are licensed under the MIT license

    Copyright (c) 2022, Javier Carbone, author Matthias Emde
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/libraryToolbarSortMode"
        android:title="@string/libraryToolbarSortMode">
        <menu>
            <item
                android:id="@+id/libraryToolbarSortModeDateAdded"
                android:title="@string/libraryToolbarSortModeDateAdded" />
            <item
                android:id="@+id/libraryToolbarSortModeLastModified"
                android:title="@string/libraryToolbarSortModeLastModified" />
            <item
                android:id="@+id/libraryToolbarSortModeName"
                android:title="@string/libraryToolbarSortModeName" />
            <item
                android:id="@+id/libraryToolbarSortModeColor"
                android:title="@string/libraryToolbarSortModeColor" />
            <item
                android:id="@+id/libraryToolbarSortModeCustom"
                android:title="@string/libraryToolbarSortModeCustom"
                android:visible="false" />
        </menu>
    </item>
</menu>
