<?xml version="1.0" encoding="utf-8"?>
<!--
    This software is licensed under the MIT license

    Copyright (c) 2022, Javier Carbone, author Matthias Emde
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/commonToolbarThemeSwitch"
        android:enabled="true"
        android:title="@string/topToolBarTheme"
        app:showAsAction="never" >

        <menu>
            <item
                android:id="@+id/commonToolbarThemeSwitchAuto"
                android:title="@string/topToolBarThemeAuto"/>

            <item
                android:id="@+id/commonToolbarThemeSwitchLight"
                android:title="@string/topToolBarThemeLight" />

            <item
                android:id="@+id/commonToolbarThemeSwitchDark"
                android:title="@string/topToolBarThemeDark" />

        </menu>

    </item>

    <item
        android:id="@+id/commonToolbarInfo"
        android:enabled="true"
        android:title="@string/app_info"
        app:showAsAction="never" />

</menu>
