<?xml version="1.0" encoding="utf-8"?>
<!--
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at https://mozilla.org/MPL/2.0/.

    Copyright (c) 2022 Matthias Emde

    Parts of this software are licensed under the MIT license

    Copyright (c) 2022, Javier Carbone, author Michael Prommersberger
    Additions and modifications, author Matthias Emde
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sessionListFragment"
        android:enabled="true"
        android:icon="@drawable/anim_sessions"
        android:title="@string/navigationSessionsTitle" />
    <item
        android:id="@+id/goalsFragment"
        android:enabled="true"
        android:icon="@drawable/anim_goals"
        android:title="@string/navigationGoalsTitle" />
    <item
        android:id="@+id/statisticsOverviewFragment"
        android:enabled="true"
        android:icon="@drawable/anim_bar_chart"
        android:title="@string/navigationStatisticsTitle" />
    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:icon="@drawable/anim_library"
        android:title="@string/navigationLibraryTitle" />
</menu>
