<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overflowitems.AboutAppActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_appinfo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_appinfo_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/appbanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/app_banner"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="32dp" >

                <!--   Concept     -->

                <TextView
                    android:text="@string/concept_title"
                    android:layout_marginTop="0dp"
                    style="@style/heading_about_pages"/>

                <TextView
                    android:text="@string/concept_text"
                    style="@style/text_about_pages"/>

                <!--   Development     -->

                <TextView
                    android:text="@string/development_title"
                    style="@style/heading_about_pages"/>

                <TextView
                    android:text="@string/development_text"
                    style="@style/text_about_pages"/>

                <!--   Design     -->

                <TextView
                    android:text="@string/about_appicon_title"
                    style="@style/heading_about_pages"/>

                <TextView
                    android:text="@string/about_appicon_text"
                    style="@style/text_about_pages"/>

                <View style="@style/about_entry_divider"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"/>

                <!--   Financing     -->

                <TextView
                    android:id="@+id/legal_project_hint"
                    android:text="@string/legal_project_hint"
                    style="@style/text_about_pages_small"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/gvl_logo"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:layout_marginStart="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@drawable/neustart_kultur_logo"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>