<?xml version="1.0" encoding="utf-8"?>
<!--
    This software is licensed under the MIT license

    Copyright (c) 2022, Javier Carbone, author Michael Prommersberger
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overflowitems.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="32dp">

            <!--       About the app     -->

            <TextView
                android:id="@+id/about_appinfo"
                android:text="@string/about_app_title"
                style="@style/about_entry"/>

            <View style="@style/about_entry_divider"/>

            <!--       Support     -->

            <TextView
                android:id="@+id/about_tv_support"
                style="@style/about_entry"
                android:text="@string/donations_title" />

            <View style="@style/about_entry_divider"/>

            <!--       Help     -->

            <TextView
                android:id="@+id/about_tv_help"
                android:text="@string/help_title"
                style="@style/about_entry"/>

            <View style="@style/about_entry_divider"/>

            <!--       Licenses     -->

            <TextView
                android:id="@+id/about_tv_licences"
                style="@style/about_entry"
                android:text="@string/licences_title" />

            <View style="@style/about_entry_divider"/>

            <!--       Legal     -->

            <TextView
                android:id="@+id/about_tv_legal"
                style="@style/about_entry"
                android:text="@string/legal_title" />

            <View style="@style/about_entry_divider"/>

            <TextView
                style="@style/text_about_pages_small"
                android:layout_marginStart="69dp"
                android:text="@string/versionName"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Made with ♥\️ in Munich"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
