<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overflowitems.LegalActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/legal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/legal_toolbar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/help_toolbar"
            android:padding="32dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_foreground"
                app:tint="?attr/colorPrimary"
                android:layout_gravity="center"/>

            <!--   Publisher    -->

            <TextView
                android:id="@+id/legal_title"
                android:text="@string/publisher"
                style="@style/heading_about_pages"/>

            <TextView
                android:id="@+id/legal_text"
                android:text="@string/legal_text"
                android:autoLink="email"
                style="@style/text_about_pages"/>


            <!--   Privacy Policy    -->


            <TextView
                android:id="@+id/privacy_policy_title"
                android:text="@string/privacy_policy_title"
                style="@style/heading_about_pages"/>

            <TextView
                android:id="@+id/privacy_policy"
                android:text="@string/privacy_policy"
                style="@style/text_about_pages_small" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>