<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <TextView
        android:id="@+id/help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/help_tips_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/help_tips_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_tips_title"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/help_tips_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_title" />

    <TextView
        android:id="@+id/help_tips_text"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:lineSpacingMultiplier="1.5"
        tools:text="Help text set here"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/help_replay_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tips_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/help_replay_intro"
        android:layout_width="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_bottom_btn"
        android:text="@string/help_replay_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tips_text" />

</androidx.constraintlayout.widget.ConstraintLayout>